<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_createTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/colorActionButton"
        android:onClick="startCreateTimerActivity"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/create_timer" />

    <Button
        android:id="@+id/button_createAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_createTimer"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:text="@string/create_alarm" />

    <TextView
        android:id="@+id/textView_savedHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_createTimer"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/saved"
        android:textColor="@color/colorHeaderText"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/listView_savedList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
        android:layout_below="@id/textView_savedHeader"
        />

</RelativeLayout>